<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:swipe="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/catalog_item_selector">

    <com.daimajia.swipe.SwipeLayout
        android:id="@+id/book_swipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/catalog_item_selector"
        swipe:leftEdgeSwipeOffset="0dp"
        swipe:rightEdgeSwipeOffset="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/catalog_item_selector"
            android:gravity="center"
            android:tag="Bottom3"
            android:weightSum="10">

            <ImageView
                android:id="@+id/trash"
                android:layout_width="27dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:src="@drawable/ic_catalog_delete" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/delete_book"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <Button
                android:id="@+id/btn_book_delete"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="4"
                android:background="#ffffff"
                android:text="@string/yes_delete"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/book_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/catalog_item_selector"
            android:elevation="5dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/book_cover"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:contentDescription="@string/book_cover" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="0dp">

                <TextView
                    android:id="@+id/book_author"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:text="@string/author_unknown"
                    android:textAppearance="?attr/textAppearanceListItem" />

                <TextView
                    android:id="@+id/book_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:textAppearance="?attr/textAppearanceListItem" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="0dp">

                    <TextView
                        android:id="@+id/book_progress"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:textAppearance="?attr/textAppearanceListItem" />

                    <TextView
                        android:id="@+id/book_source"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:textAppearance="?attr/textAppearanceListItem" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </com.daimajia.swipe.SwipeLayout>
</LinearLayout>